# pipecat-test-agent

./: .gitignore  CLAUDE.md  Dockerfile  README.md  agent_launcher.py  bot.py  build_and_push.sh  config.py  env.example  local_runner.py  pcc-deploy.toml  pyproject.toml  requirements.txt
.claude/: settings.local.json
src/: bot.py  config.py  transcript_handler.py
